   * Use the same codepath to initialize every MP campaign's scenario, thus
     allowing the display of a functional MP "Connect/Wait" screen before the
     next scenario.
 * Graphics
   * Full animations for the Dwarven Thunderer line.
 * Language and i18n:
   * Updated translations: German, Greek, Indonesian, Lithuanian, Portuguese,
     Vietnamese
 * Lua API:
   * Added scroll_to_leader field (read/write) to wesnoth.sides table
    elements.
 * WML engine:
   * [store_side] now stores the scroll_to_leader attribute from sides.
   * Added new CampaignWML attributes "type", "min_players" and "max_players".
   * Added new ScenariowML attributes "new_game_title",
     "remove_from_carryover_on_leaders_loss" and "force_use_map_settings".
   * Allow numerical values for SideWML "controller" attribute.
 * User interface:
   * MP "Create" screen has been revamped by moving scenario configuration
     widgets to a new MP "Configure" screen, introducing a description box,
     adding a combo selection for different types of game, and adjusting it to
     work well with MP campaigns.
   * Possible fix for clipboard integration issues with GUI2 widgets on X11.
 * Miscellaneous and bug fixes:
   * Added -256 and -512 color shifts to FADE_TO_BLACK and FADE_TO_BLACK_HOLD
     macros to account for ToD color shifts greater than -31, guaranteeing
     complete darkness.
   * Unit WML frames with image modifications are now shown correctly for
     hits/death.
   * Fixed compare_images.py (called by wesnoth-optipng) and pofix.py to
     function with python-3.2.
   * Refactored and split the MP "Create" and "Connect" screens' code into
     gui and engine parts.
   * Lock faction, leader, and gender selections in MP "Connect" if "Use map
     settings" is on and default values were provided.

Version 1.11.6:
 * Add-ons client:
   * The Description popup displays the selected add-on's dependencies now,
     using color-keyed statuses.