@@ -18,6 +18,7 @@ Version 1.11.6+dev:
  * Language and i18n:
    * Updated translations: German, Greek, Indonesian, Lithuanian, Portuguese,
      Vietnamese
+   * Improved internationalization of notifications on Windows.
  * Lua API:
    * Added scroll_to_leader field (read/write) to wesnoth.sides table
     elements.
